      agree with the reported UHBD values as well).
    * hz in mgparse.c causes name clash with AIX environmental variable;
      fixed.
    * Fixed documentation to state that using a kappa map does not ignore
      ELEC ION statements.
    * Added a stability fix for printing charge densities for LPBE-type
      calculations.
	
#############################################################################
BETA PUBLIC RELEASE VERSION 0.3.1       04-13-04
#############################################################################
  - NEW FEATURES
    * New APBS tutorial
    * New tools/python/vgrid/mergedx.py script to merge dx files generated
      from parallel APBS runs back into a single dx file.
  - BUG FIXES
    * Fixed bug in parallel calculations where atoms or points on a border
      between two processors were not included.  Modified setup algorithm for 
      parallel calculations to allow partitions in order to obtain grid points 
      and spacing from the global grid information.
    * Modified extEnergy function to work with parallel calculations, giving
      better accuracy.

#############################################################################
BETA PUBLIC RELEASE VERSION 0.3.0       02-01-04
#############################################################################
APBS is now supported by the NIH via NIGMS grant GM69702-01.

  CHANGES THAT AFFECT USERS:
  - NEW FEATURES
    * New version of the documentation
    * New directory structure in tools/
    * Finished fe-manual mode for ELEC calculations -- this is the adaptive
      finite element solver
    * Added documetnation for fe-manual
    * New apbs/tools/manip/inputgen.py script to automatically generate input
      APBS files from PQR data
    * Added new asynchronous mode in mg-para parallel calculations to enable
      running on-demand and/or limited resources
    * Added new script (tools/manip/async.sh) to convert mg-para calculations
      in mg-async calculations